basic API working on H2 db with data.sql
