# src/main/gen/sk/filiptvrdon/todo/api/TodosApi.java
@@ -32,7 +32,7 @@ import java.util.Map;
 import java.util.Optional;
 import javax.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-09-13T12:51:31.428+02:00[Europe/Prague]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-09-14T13:06:43.523+02:00[Europe/Prague]")
 @Validated
 @Tag(name = "todos", description = "the todos API")
 public interface TodosApi {
@@ -130,7 +130,7 @@ public interface TodosApi {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"created_at\" : \"2020-05-06T18:25:43.511Z\", \"due_at\" : \"2023-05-06T18:25:43.511Z\", \"completed\" : true }";
+                    String exampleString = "{ \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"completed\" : true }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
@@ -169,7 +169,7 @@ public interface TodosApi {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "[ { \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"created_at\" : \"2020-05-06T18:25:43.511Z\", \"due_at\" : \"2023-05-06T18:25:43.511Z\", \"completed\" : true }, { \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"created_at\" : \"2020-05-06T18:25:43.511Z\", \"due_at\" : \"2023-05-06T18:25:43.511Z\", \"completed\" : true } ]";
+                    String exampleString = "[ { \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"completed\" : true }, { \"name\" : \"Todo Item\", \"description\" : \"Simple Todo item\", \"completed\" : true } ]";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
