# src/main/resources/openapi.yaml
@@ -142,8 +142,6 @@ components:
       example:
         name: Todo Item
         description: Simple Todo item
-        created_at: 2020-05-06T18:25:43.511Z
-        due_at: 2023-05-06T18:25:43.511Z
         completed: true
       properties:
         id:
@@ -154,12 +152,6 @@ components:
         name:
           type: string
         description:
-          type: string
-        created_at:
-          format: date-time
-          type: string
-        due_at:
-          format: date-time
           type: string
         completed:
           type: boolean
